# docs/swagger.json
@@ -10,6 +10,7 @@
     "paths": {
         "/accounts/login": {
             "post": {
+                "description": "The session token should be renewed a week before expires, possible error: WrongPassword, UserNotFound, BadInput, BadPassword, BadUsername, BadDeviceName",
                 "consumes": [
                     "application/json"
                 ],
@@ -38,8 +39,11 @@
                             "$ref": "#/definitions/model.SessionInfo"
                         }
                     },
-                    "404": {
-                        "description": "Not Found"
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/route.ErrorJSON"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -50,9 +54,6 @@
         "/accounts/logout": {
             "post": {
                 "consumes": [
-                    "application/json"
-                ],
-                "produces": [
                     "application/json"
                 ],
                 "tags": [
@@ -73,12 +74,16 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
                     }
                 }
             }
         },
         "/accounts/register": {
             "post": {
+                "description": "Possible error: BadInput, BadPassword, BadUsername, BadDeviceName, UserAlreadyExists",
                 "consumes": [
                     "application/json"
                 ],
@@ -101,14 +106,17 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/model.SessionInfo"
                         }
                     },
-                    "404": {
-                        "description": "Not Found"
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/route.ErrorJSON"
+                        }
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -149,6 +157,9 @@
                     "400": {
                         "description": "Bad Request"
                     },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
@@ -181,11 +192,11 @@
                             "$ref": "#/definitions/model.NovelView"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request"
-                    },
                     "401": {
                         "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -195,6 +206,7 @@
         },
         "/novel/create": {
             "post": {
+                "description": "Possible error code: Missing field, Invalid language format, Title too long, Tagline too long",
                 "consumes": [
                     "application/json"
                 ],
@@ -204,7 +216,7 @@
                 "tags": [
                     "novel"
                 ],
-                "summary": "Create a new novel, return the created novel id",
+                "summary": "Create a new novel with the provided metadata, return the created novel id",
                 "parameters": [
                     {
                         "description": "Novel details",
@@ -212,19 +224,22 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CreateNovelArgs"
+                            "$ref": "#/definitions/model.NovelMetadata"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/route.createNovelResult"
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/route.ErrorJSON"
+                        }
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -237,15 +252,17 @@
         }
     },
     "definitions": {
-        "model.CreateNovelArgs": {
+        "model.IncludeSessionString": {
             "type": "object",
             "properties": {
-                "author": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
+                "session": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.NovelMetadata": {
+            "type": "object",
+            "properties": {
                 "description": {
                     "type": "string"
                 },
@@ -255,21 +272,32 @@
                 "language": {
                     "type": "string"
                 },
+                "status": {
+                    "$ref": "#/definitions/model.NovelStatusID"
+                },
                 "tagline": {
                     "type": "string"
                 },
                 "title": {
                     "type": "string"
+                },
+                "visibility": {
+                    "$ref": "#/definitions/model.VisibilityID"
                 }
             }
         },
-        "model.IncludeSessionString": {
-            "type": "object",
-            "properties": {
-                "session": {
-                    "type": "string"
-                }
-            }
+        "model.NovelStatusID": {
+            "type": "integer",
+            "enum": [
+                1,
+                2,
+                3
+            ],
+            "x-enum-varnames": [
+                "StatusOngoing",
+                "StatusCompleted",
+                "StatusDropped"
+            ]
         },
         "model.NovelView": {
             "type": "object",
@@ -374,6 +402,57 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.VisibilityID": {
+            "type": "integer",
+            "enum": [
+                2,
+                1
+            ],
+            "x-enum-varnames": [
+                "VisibilityPrivate",
+                "VisibilityPublic"
+            ]
+        },
+        "route.ErrorCode": {
+            "type": "integer",
+            "enum": [
+                0,
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9,
+                10
+            ],
+            "x-enum-varnames": [
+                "BadInput",
+                "UserNotFound",
+                "WrongPassword",
+                "BadPassword",
+                "BadUsername",
+                "BadDeviceName",
+                "UserAlreadyExists",
+                "InvalidLanguageFormat",
+                "TitleTooLong",
+                "TaglineTooLong",
+                "DescriptionTooLong"
+            ]
+        },
+        "route.ErrorJSON": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "$ref": "#/definitions/route.ErrorCode"
+                },
+                "message": {
                     "type": "string"
                 }
             }
