# route/account.go
@@ -2,16 +2,33 @@ package route
 
 import (
 	"Lightnovel/model"
-	"Lightnovel/utils"
-	"errors"
+	"fmt"
 	"github.com/gofiber/fiber/v2"
-	"github.com/gofiber/fiber/v2/log"
+	"golang.org/x/crypto/bcrypt"
+	"regexp"
+	"unicode/utf8"
 )
 
 type authCredentials struct {
 	Username   string `json:"username"`
 	Password   string `json:"password"`
 	DeviceName string `json:"deviceName"`
+}
+
+func (ac *authCredentials) Validate() (bool, ErrorCode) {
+	if IsUsernameValid(ac.Username) == false {
+		return false, BadUsername
+	}
+
+	if IsPasswordValid(ac.Password) == false {
+		return false, BadPassword
+	}
+
+	if utf8.RuneCountInString(ac.DeviceName) > model.DeviceNameMaxLength {
+		return false, BadDeviceName
+	}
+
+	return true, BadInput
 }
 
 func AddAccountRoutes(router *fiber.Router, db model.DB) {
@@ -26,47 +43,47 @@ func AddAccountRoutes(router *fiber.Router, db model.DB) {
 	accountRoute.Post("/renew", renew(db))
 }
 
-// Login
+//	 Login
 //
-//	@Summary	Log the user in, return a new user session
-//	@Tags		accounts
-//	@Accept		json
-//	@Produce	json
-//	@Param		credential	body		authCredentials	true	"User credentials"
-//	@Success	200			{object}	model.SessionInfo
-//	@Failure	404
-//	@Failure	500
-//	@Router		/accounts/login [POST]
-func login(db model.DB) func(*fiber.Ctx) error {
+//	@Summary		Log the user in, return a new user session
+//	@Description	The session token should be renewed a week before expires, possible error: WrongPassword, UserNotFound, BadInput, BadPassword, BadUsername, BadDeviceName
+//	@Tags			accounts
+//	@Accept			json
+//	@Produce		json
+//	@Param			credential	body		authCredentials	true	"User credentials"
+//	@Success		200			{object}	model.SessionInfo
+//	@Failure		400			{object}	ErrorJSON
+//	@Failure		500
+//	@Router			/accounts/login [POST]
+func login(db model.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var authCredentials authCredentials
 		err := c.BodyParser(&authCredentials)
-		log.Debugf("%#v", authCredentials)
 		if err != nil {
-			return c.SendStatus(fiber.StatusBadRequest)
+			return c.Status(fiber.StatusBadRequest).JSON(buildErrorJSON(BadInput))
 		}
 
-		user, err := db.GetUser(authCredentials.Username)
+		if ok, code := authCredentials.Validate(); !ok {
+			return c.Status(fiber.StatusBadRequest).JSON(buildErrorJSON(code))
+		}
+
+		user, ok := db.GetUser(authCredentials.Username)
 		// Do the hash comparison anyway to prevent timing attacks
-		if errors.Is(err, model.ErrUserNotFound) {
-			utils.PasswordVerify(authCredentials.Password, []byte{})
-			return c.SendStatus(fiber.StatusNotFound)
-		} else if err != nil {
-			log.Error(err)
-			utils.PasswordVerify(authCredentials.Password, []byte{})
-			return c.SendStatus(fiber.StatusInternalServerError)
+		passwordGood := PasswordVerify(authCredentials.Password, user.Password)
+		if !ok {
+			return c.Status(fiber.StatusBadRequest).JSON(buildErrorJSON(UserNotFound))
 		}
 
-		if !utils.PasswordVerify(authCredentials.Password, user.Password) {
-			return c.SendStatus(fiber.StatusNotFound)
+		if !passwordGood {
+			return c.Status(fiber.StatusBadRequest).JSON(buildErrorJSON(WrongPassword))
 		}
-		sessionInfo, err := db.CreateSession(
+
+		sessionInfo, ok := db.CreateSession(
 			user.ID,
 			authCredentials.DeviceName,
 		)
 
-		if err != nil {
-			log.Warn(err)
+		if !ok {
 			return c.SendStatus(fiber.StatusInternalServerError)
 		}
 		return c.JSON(sessionInfo)
@@ -75,39 +92,45 @@ func login(db model.DB) func(*fiber.Ctx) error {
 
 // Register
 //
-//	@Summary	Register the user, return a new user session
-//	@Tags		accounts
-//	@Accept		json
-//	@Produce	json
-//	@Param		credential	body		authCredentials	true	"User credentials"
-//	@Success	200			{object}	model.SessionInfo
-//	@Failure	404
-//	@Failure	500
-//	@Router		/accounts/register [POST]
-func register(db model.DB) func(*fiber.Ctx) error {
+//	@Summary		Register the user, return a new user session
+//	@Description	Possible error: BadInput, BadPassword, BadUsername, BadDeviceName, UserAlreadyExists
+//	@Tags			accounts
+//	@Accept			json
+//	@Produce		json
+//	@Param			credential	body		authCredentials	true	"User credentials"
+//	@Success		201			{object}	model.SessionInfo
+//	@Failure		400			{object}	ErrorJSON
+//	@Failure		500
+//	@Router			/accounts/register [POST]
+func register(db model.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var authCredentials authCredentials
 		err := c.BodyParser(&authCredentials)
-		log.Debugf("%#v", authCredentials)
 		if err != nil {
 			return c.SendStatus(fiber.StatusBadRequest)
 		}
 
-		userId, err := db.CreateUser(
+		if ok, code := authCredentials.Validate(); !ok {
+			return c.Status(fiber.StatusBadRequest).JSON(buildErrorJSON(code))
+		}
+
+		_, ok := db.GetUser(authCredentials.Username)
+		if ok {
+			return c.Status(fiber.StatusBadRequest).JSON(buildErrorJSON(UserAlreadyExists))
+		}
+		userId, ok := db.CreateUser(
 			authCredentials.Username,
 			authCredentials.Password,
 		)
-		if errors.Is(err, model.ErrInvalidPassword) || errors.Is(err, model.ErrUserAlreadyExist) {
-			return c.SendStatus(fiber.StatusBadRequest)
-		} else if err != nil {
+		if !ok {
 			return c.SendStatus(fiber.StatusInternalServerError)
 		}
 
-		sessionInfo, err := db.CreateSession(userId, authCredentials.DeviceName)
-		if err != nil {
+		sessionInfo, ok := db.CreateSession(userId, authCredentials.DeviceName)
+		if !ok {
 			return c.SendStatus(fiber.StatusInternalServerError)
 		}
-		return c.JSON(sessionInfo)
+		return c.Status(fiber.StatusCreated).JSON(sessionInfo)
 	}
 }
 
@@ -116,11 +139,11 @@ func register(db model.DB) func(*fiber.Ctx) error {
 //	@Summary	Log the user out
 //	@Tags		accounts
 //	@Accept		json
-//	@Produce	json
 //	@Param		credential	body	model.IncludeSessionString	true	"User credentials"
 //	@Success	200
+//	@Failure	400
 //	@Router		/accounts/logout [POST]
-func logout(db model.DB) func(*fiber.Ctx) error {
+func logout(db model.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var sessionStr model.IncludeSessionString
 		err := c.BodyParser(&sessionStr)
@@ -141,9 +164,10 @@ func logout(db model.DB) func(*fiber.Ctx) error {
 //	@Param		credential	body		model.IncludeSessionString	true	"User credentials"
 //	@Success	200			{object}	model.SessionInfo
 //	@Failure	400
+//	@Failure	401
 //	@Failure	500
 //	@Router		/accounts/renew [POST]
-func renew(db model.DB) func(*fiber.Ctx) error {
+func renew(db model.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		var oldSessionStr model.IncludeSessionString
 		err := c.BodyParser(&oldSessionStr)
@@ -151,17 +175,31 @@ func renew(db model.DB) func(*fiber.Ctx) error {
 			return c.SendStatus(fiber.StatusBadRequest)
 		}
 
-		session, err := db.GetSession(oldSessionStr.Session)
-		if err != nil {
-			return c.SendStatus(fiber.StatusBadRequest)
+		session, ok := db.GetSession(oldSessionStr.Session)
+		if !ok {
+			return c.SendStatus(fiber.StatusUnauthorized)
 		}
 
-		newSessionInfo, err := db.CreateSession(session.UserID, session.DeviceName)
-		if err != nil {
+		newSessionInfo, ok := db.CreateSession(session.UserID, session.DeviceName)
+		if !ok {
 			return c.SendStatus(fiber.StatusInternalServerError)
 		}
 
 		_ = db.DeleteSession(oldSessionStr.Session)
 		return c.JSON(newSessionInfo)
 	}
+}
+
+func PasswordVerify(password string, hash []byte) bool {
+	err := bcrypt.CompareHashAndPassword(hash, []byte(password))
+	return err == nil
+}
+
+func IsUsernameValid(username string) bool {
+	matched, _ := regexp.MatchString(fmt.Sprintf("^[a-zA-Z]{#v,#v}$", model.UserNameMinLength, model.UserNameMaxLength), username)
+	return matched
+}
+
+func IsPasswordValid(password string) bool {
+	return !(len(password) < model.PasswordMinLength || len(password) > model.PasswordMaxLength)
 }
